<resources>
    <string name="app_name">POS Application</string>
    <string name="stamford_pos_application">Stamford POS Application</string>
    <string name="stamford_pos_setting">Stamford POS Setting</string>
    <string name="user_label">User:</string>
    <string name="password_label">Password</string>
    <string name="login_label">Login</string>
    <string name="setup_branch_label">Setup Branch</string>
    <string name="update_branch_label">Update Branch</string>
    <string name="change_ui_settings_label">Change UI Settings</string>
    <string name="macarons_label">Macarons</string>
    <string name="drinks_label">Drinks</string>
    <string name="desserts_label">Desserts</string>
    <string name="icecreams_label">Ice-creams</string>
    <string name="thai_dishes_label">Thai Dishes</string>
    <string name="fruits_label">Fruits</string>
    <string name="branch_name_label">Branch Name:</string>
    <string name="staff_name_label">Staff Name:</string>
    <string name="staff_id_label">Staff ID:</string>
    <string name="cart_item_number">#</string>
    <string name="cart_item_product">Product</string>
    <string name="cart_item_quantity">Quantity</string>
    <string name="cart_item_price">Price</string>
    <string name="cart_item_total_price">Total Price</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_price_label">Total Price: </string>
    <string name="submit_order_label">Submit Order</string>
    <string name="remember_me_label">Remember me</string>
    <string name="upload_daily_report_label">Upload Daily Report</string>
    <string name="camera_error_message">Camera permission is required to perform this action</string>

    <string name="transaction_success_title">Transaction Successful</string>
    <string name="transaction_success_body">Order placed successfully. Please wait for your items.</string>
    <string name="okay_label">Okay</string>

    <string name="transaction_failed_title">Transaction Failed</string>
    <string name="transaction_failed_body">Order placing failed. Please try again.</string>
    <string name="go_back_label">Go Back</string>
    <string name="search_contact_label">Search Contact</string>
    <string name="command_center">Command Center</string>
    <string name="new_order_label">New Order</string>
    <string name="add_product_label">Add Product</string>
    <string name="Products">Products</string>
    <string name="list_products_label">List Products</string>
    <string name="product_name_label">Product Name:</string>
    <string name="product_type_label">Product Type:</string>
    <string name="product_price_label">Price:</string>
    <string name="product_units_available_label">Units Available:</string>

</resources>