<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <TextView
            android:id="@+id/cart_header_number_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/cart_item_text_size"
            android:layout_marginStart="@dimen/cart_item_margin_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/cart_item_number" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle_guideline_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.40" />

        <TextView
            android:id="@+id/cart_header_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/cart_item_text_size"
            android:layout_marginStart="@dimen/cart_item_margin_start"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/middle_guideline_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/cart_item_product" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle_guideline_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.60" />

        <TextView
            android:id="@+id/cart_header_quantity_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/cart_item_text_size"
            android:layout_marginStart="@dimen/cart_item_margin_start"
            app:layout_constraintStart_toEndOf="@id/middle_guideline_1"
            app:layout_constraintEnd_toStartOf="@id/middle_guideline_2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/cart_item_quantity" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.80" />

        <TextView
            android:id="@+id/cart_header_unit_price_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/cart_item_text_size"
            android:layout_marginStart="@dimen/cart_item_margin_start"
            app:layout_constraintStart_toEndOf="@id/middle_guideline_2"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/cart_item_price" />

        <TextView
            android:id="@+id/cart_header_total_price_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/cart_item_text_size"
            android:layout_marginStart="@dimen/cart_item_margin_start"
            app:layout_constraintStart_toEndOf="@id/right_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/cart_item_total_price" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
