<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.sharmin.posapplication.screens.commandCenter.CommandCenterActivity">

        <TextView
            android:id="@+id/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/heading_text_size"
            android:layout_marginTop="@dimen/setting_headline_margin_top"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/command_center" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/headline"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/center_guideline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/center_guideline"
                android:layout_marginStart="@dimen/button_bar_margin_start"
                android:layout_marginTop="@dimen/button_bar_margin_top"
                android:orientation="vertical">

                <Button
                    android:id="@+id/newOrder"
                    android:layout_width="@dimen/setting_button_width"
                    android:layout_height="@dimen/setting_button_height"
                    android:textSize="@dimen/setting_text_size"
                    android:layout_marginTop="@dimen/setting_vertical_margin"
                    android:layout_marginBottom="@dimen/setting_vertical_margin"
                    android:text="@string/new_order_label" />

                <Button
                    android:id="@+id/addProduct"
                    android:layout_width="@dimen/setting_button_width"
                    android:layout_height="@dimen/setting_button_height"
                    android:textSize="@dimen/setting_text_size"
                    android:layout_marginTop="@dimen/setting_vertical_margin"
                    android:layout_marginBottom="@dimen/setting_vertical_margin"
                    android:text="@string/add_product_label" />

                <Button
                    android:id="@+id/listProducts"
                    android:layout_width="@dimen/setting_button_width"
                    android:layout_height="@dimen/setting_button_height"
                    android:textSize="@dimen/setting_text_size"
                    android:layout_marginTop="@dimen/setting_vertical_margin"
                    android:layout_marginBottom="@dimen/setting_vertical_margin"
                    android:text="@string/list_products_label" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
