<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sharmin.posapplication.activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/stamford_pos_application" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/userGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="60dp"
            app:layout_constraintTop_toBottomOf="@id/headline" />

        <TextView
            android:id="@+id/userLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/userGuideline"
            app:layout_constraintBottom_toBottomOf="@+id/userGuideline"
            android:text="@string/user_label" />

        <EditText
            android:id="@+id/userInput"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/edit_text_border"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/userGuideline"
            app:layout_constraintBottom_toBottomOf="@+id/userGuideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/passwordGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="110dp"
            app:layout_constraintTop_toBottomOf="@id/headline" />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/passwordGuideline"
            app:layout_constraintBottom_toBottomOf="@+id/passwordGuideline"
            android:text="@string/password_label" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_border"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/passwordGuideline"
            app:layout_constraintBottom_toBottomOf="@+id/passwordGuideline" />

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordInput"
            android:text="@string/login_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>