<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sharmin.posapplication.screens.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/heading_text_size"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/stamford_pos_application" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/userGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/user_guideline_begin"
            app:layout_constraintTop_toBottomOf="@id/headline" />

        <TextView
            android:id="@+id/userLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/label_text_size"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/userGuideline"
            app:layout_constraintBottom_toBottomOf="@+id/userGuideline"
            android:text="@string/user_label" />

        <EditText
            android:id="@+id/userInput"
            android:layout_width="@dimen/login_input_width"
            android:layout_height="@dimen/login_input_height"
            android:layout_marginStart="@dimen/login_input_margin_start"
            android:background="@drawable/edit_text_border"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/userGuideline"
            app:layout_constraintBottom_toBottomOf="@+id/userGuideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/passwordGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/password_guideline_begin"
            app:layout_constraintTop_toBottomOf="@id/headline" />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/label_text_size"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/passwordGuideline"
            app:layout_constraintBottom_toBottomOf="@+id/passwordGuideline"
            android:text="@string/password_label" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="@dimen/login_input_width"
            android:layout_height="@dimen/login_input_height"
            android:layout_marginStart="@dimen/login_input_margin_start"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_border"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/passwordGuideline"
            app:layout_constraintBottom_toBottomOf="@+id/passwordGuideline" />

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="@dimen/login_button_width"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginTop="@dimen/login_button_margin_top"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordInput"
            android:text="@string/login_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>