<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rectangle_border"
        android:paddingVertical="@dimen/show_product_padding">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/show_product_horizontal_padding">

            <ImageView
                android:id="@+id/product_image_iv"
                android:layout_width="120dp"
                android:layout_height="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/product_title_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginBottom="@dimen/form_label_margin_bottom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_image_iv"
                android:layout_marginTop="@dimen/form_label_margin_top"
                android:text="@string/product_name_label"
                android:textSize="@dimen/form_label_text_size" />

            <EditText
                android:id="@+id/product_title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/product_title_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/form_label_text_size" />

            <TextView
                android:id="@+id/product_type_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/form_label_margin_top"
                android:layout_marginBottom="@dimen/form_label_margin_bottom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_title_et"
                android:text="@string/product_type_label"
                android:textSize="@dimen/form_label_text_size" />

            <EditText
                android:id="@+id/product_type_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/product_type_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/form_label_text_size" />

            <TextView
                android:id="@+id/product_price_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/form_label_margin_top"
                android:layout_marginBottom="@dimen/form_label_margin_bottom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_type_et"
                android:text="@string/product_price_label"
                android:textSize="@dimen/form_label_text_size" />

            <EditText
                android:id="@+id/product_price_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/product_price_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/form_label_text_size" />

            <TextView
                android:id="@+id/product_units_available_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/form_label_margin_top"
                android:layout_marginBottom="@dimen/form_label_margin_bottom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_price_et"
                android:text="@string/product_units_available_label"
                android:textSize="@dimen/form_label_text_size" />

            <EditText
                android:id="@+id/product_units_available_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/product_units_available_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/form_label_text_size" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>